# langgraph-travel-planner

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  start-local-backend.cmd  start-local-frontend.cmd
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  run_backend.py
backend/app/: main.py
backend/app/api/: schemas.py
backend/app/api/routes/: auth.py  conversations.py  history.py  topology.py  travel.py  trips.py
backend/app/api/schemas/: __init__.py  auth.py  conversation.py  trip.py
backend/app/config/: prompts.py  settings.py  tools.py
backend/app/core/: auth.py  checkpoint.py  database.py  llm.py  store.py  streaming.py
backend/app/migrations/: init.sql
backend/app/modules/destination/: graph.py  nodes.py  state.py  tools.py
backend/app/modules/itinerary/: graph.py  nodes.py  react_agent.py  state.py  tools.py
backend/app/modules/planner/: conditions.py  graph.py  nodes.py  provider_nodes.py  state.py  (+2 more)
backend/app/tests/: test_amap_provider.py  test_auth.py  test_checkpoint.py  test_conversations_api.py  test_database.py  test_destination.py  test_graph.py  test_infrastructure.py  test_itinerary.py  test_mock_provider.py  test_models.py  test_planner_provider_nodes.py  test_planner_validation.py  test_provider_cache.py  test_provider_factory.py  test_provider_models.py  test_provider_service.py  test_store.py  test_streaming.py  test_tools.py  test_trip_mapper.py  test_trip_models.py  test_trip_patches.py  test_trip_persistence_node.py  test_trip_repository.py  test_trip_schema.py  test_trips_api.py
(+54 files in other folders)
